--- a/Lesson6_Assignment/photos.htm
+++ b/Lesson6_Assignment/photos.htm
@@ -3,8 +3,8 @@
 <head>
    <!--
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author: Kristen Howard
+    Date:   10/22/15
     Filename: photos.htm
    -->
    <meta charset="utf-8" />
